styling and image fixes

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ header-img: img/about-bg.jpg
     <!-- Main Content -->
 
                 <p>My name is Filipe Duarte and I’m software developer. I’m Portuguese, although born in the UK, and I am currently living in London, working for UI Centric. I try to blog mostly about developer stuff, from projects I’m working on, to problems and solutions I find while coding (which hopefully might help others), with the occasion plug for an app or two I might put out there.</p>
-                <img src="../assets/WP_20131019_094.jpg" width="300" height="169" />
+                <img src="/assets/WP_20131019_094.jpg" width="300" height="169" />
 				<p>I’m a Microsoft enthusiast whether we’re talking about tech, software, dev stuff, or research, and it would be a huge achievement for me if one day I got to work there, in the meantime I’m learning as much as I can, and working with a few interesting companies and their exciting projects.</p>
                 <p>When I’m not coding, I’m usually found behind a good book, enjoying a good movie, shredding on my guitar, riding some waves or some slopes (depending on the season), or saving the world in some videogame.</p>
             
