--- a/apps.html
+++ b/apps.html
@@ -25,7 +25,7 @@ header-img: img/home-bg.jpg
     <ul class="pager">
 		{% if paginator.next_page %}
 			<li class="next">
-				<a href="{{site.baseurl}}page{{paginator.next_page}}">Older Projects &rarr;</a>
+				<a href="/page{{paginator.next_page}}">Older Projects &rarr;</a>
 			</li>
 		{% endif %}
 		
@@ -33,9 +33,9 @@ header-img: img/home-bg.jpg
 	
 			<li class="previous">
 			{% if paginator.page == 2 %}
-				<a href="{{site.baseurl}}">&larr; Newer Projects</a>
+				<a href="/">&larr; Newer Projects</a>
 			{% else %}
-				<a href="{{site.baseurl}}page{{paginator.previous_page}}">&larr; Newer Projects</a>
+				<a href="/page{{paginator.previous_page}}">&larr; Newer Projects</a>
 			{% endif %}
 			</li>
 		{% endif %}
