--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@ comments: false
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
+  <h1 class="page-title">Page not found</h1>
   <p class="lead">Uh oh, looks like I've messed up and left a link pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
 </div>
